pruebas modulo de proveedor

--- a/paquescolar-web/src/main/webapp/activarPassword.xhtml
+++ b/paquescolar-web/src/main/webapp/activarPassword.xhtml
@@ -39,38 +39,22 @@
                             <div class="ui-g-12">
                                 <p:outputLabel value="Sistema de Paquetes Escolares" style="font-size: 30px; padding-top: 25px; font-family: 'Bembo Std' !important"/>
                             </div>
-                            <p:outputPanel rendered="#{! validarProveedorMB.showPanel}">
+                            <p:outputPanel >
                                 <div class="ui-g-12">
 
                                     <div class="ui-g-12">
-                                        <p:outputLabel for="txtCodigo" value="Código" style="font-size: 18px; font-family: 'Bembo Std' !important"/>
-                                        <p:inputText id="txtCodigo" styleClass="textMayuscula" onkeyup="return cUpper(this);" placeholder="CÓDIGO" value="#{validarProveedorMB.codigo}"/>
+                                        <h:outputLabel for="pwd1" value="Clave de Acceso: *" />
+                                        <p:password id="pwd1" value="#{validarProveedorMB.pass1}" match="pwd2" label="Password 1" required="true" />
                                     </div>
                                     <div class="ui-g-12">
-                                        <p:outputLabel for="nit" value="N.I.T." style="font-size: 18px; font-family: 'Bembo Std' !important"/>
-                                        <p:inputMask id="nit" mask="9999-999999-999-9" onkeyup="return cUpper(this);" value="#{validarProveedorMB.nit}"/>
-                                    </div>
-                                    <div class="ui-g-12">
-                                        <p:outputLabel for="txtDui" value="D.U.I." style="font-size: 18px; font-family: Bembo Std !important" />
-                                        <p:inputMask id="txtDui" mask="99999999-9" onkeyup="return cUpper(this);" value="#{validarProveedorMB.dui}"/>
+                                        <h:outputLabel for="pwd2" value="Confirmar clave: *" />
+                                        <p:password id="pwd2" value="#{validarProveedorMB.pass1}" label="Password 2" required="true" />
                                     </div>
                                     <div class="ui-g-12 button-container">
-                                        <p:commandButton id="btnValidar" value="Validar" styleClass="blue-btn raised-btn" action="#{validarProveedorMB.validarProveedor()}" update="divPrincipal"/>
-                                        <p:blockUI block="btnValidar" trigger="btnValidar"  />
+                                        <p:commandButton id="btnGuardar" value="Guardar" styleClass="blue-btn raised-btn" 
+                                                         action="#{validarProveedorMB.guardarPasswordProv()}" update="divPrincipal"/>
+                                        <p:blockUI block="btnValidar" trigger="btnGuardar" />
                                         <h:outputText value="."/>
-                                    </div>
-                                </div>
-
-                            </p:outputPanel>
-
-                            <p:outputPanel rendered="#{validarProveedorMB.showPanel}">
-                                <div class="ui-g-12">
-
-                                    <div class="ui-g-12">
-                                        <p:outputLabel value="Regresar a la pagina de inicio" style="font-size: 18px; font-family: 'Bembo Std' !important"/>
-                                    </div>
-                                    <div class="ui-g-12 button-container">
-                                        <p:commandButton value="Regresar" styleClass="blue-btn raised-btn" action="index"/>
                                     </div>
                                 </div>
 
