--- a/envio-web/src/main/webapp/prueba.xhtml
+++ b/envio-web/src/main/webapp/prueba.xhtml
@@ -2,8 +2,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:jsf="http://xmlns.jcp.org/jsf">
+      xmlns:p="http://primefaces.org/ui">
 
     <h:head>
         <f:facet name="first">
@@ -94,6 +93,11 @@
                                             <p:commandButton id="btnEnviar" widgetVar="btnEnviar" value="Enviar" 
                                                              action="#{envioView.validarFormulario()}" style="width: 200px;" />
                                         </p:panelGrid>
+
+                                        <p:panel visible="false">
+                                            <p:commandButton id="btnSend" widgetVar="btnSend" value="enviar" action="#{envioView.enviarCorreos()}"
+                                                             update="outPrincipal" onclick="PF('dlgBar').show();PF('pbAjax').start();"/>
+                                        </p:panel>
                                     </p:outputPanel>
                                 </p:outputPanel>
 
