Produccion modulo de prov

--- a/paquescolar-web/src/main/webapp/activarPassword.xhtml
+++ b/paquescolar-web/src/main/webapp/activarPassword.xhtml
@@ -53,7 +53,7 @@
                                     <div class="ui-g-12 button-container">
                                         <p:commandButton id="btnGuardar" value="Guardar" styleClass="blue-btn raised-btn" 
                                                          action="#{validarProveedorMB.guardarPasswordProv()}" update="divPrincipal"/>
-                                        <p:blockUI block="btnValidar" trigger="btnGuardar" />
+                                        <p:blockUI block="btnGuardar" trigger="btnGuardar" />
                                         <h:outputText value="."/>
                                     </div>
                                 </div>
