--- a/paquescolar-web/src/main/webapp/app/reg08HabilitarProCredito.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg08HabilitarProCredito.xhtml
@@ -6,20 +6,21 @@
     xmlns:f="http://java.sun.com/jsf/core"
     template="#{pageContext.servletContext.contextPath}/resources/template/template.xhtml">
     <ui:define name="content">
+        <p:menubar id="menuBar">  
+            <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
+            <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
+            <p:menuitem value="Guardar" icon="fa fa-save" action="#{creditoBancarioController.guardar}" update="pnlProceso tblEntidades"/>
+            <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
+            <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
+
+            <f:facet  name="options">  
+                <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
+            </f:facet>  
+        </p:menubar>
+
         <div class="ui-g">
             <div class="ui-g-12">
                 <div class="ui-g-12 card">
-                    <p:menubar id="menuBar">  
-                        <p:menuitem value="Nuevo" icon="fa fa-file-o" disabled="true"/>
-                        <p:menuitem value="Modificar" icon="fa fa-edit" disabled="true"/>
-                        <p:menuitem value="Guardar" icon="fa fa-save" action="#{creditoBancarioController.guardar}" update="pnlProceso tblEntidades"/>
-                        <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>
-
-                        <f:facet  name="options">  
-                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
-                        </f:facet>  
-                    </p:menubar>
                     <div class="ui-g-12 ui-md-6 ui-lg-6">
                         <p:panel id="pnlProceso">
                             <f:facet name="header">
@@ -30,17 +31,20 @@
                             <p:dataTable value="#{creditoBancarioController.lstDetalleProcesoCredito}" var="det" rowKey="#{det.idDetProcesoAdq}"
                                          selection="#{creditoBancarioController.detalleProceso}" selectionMode="single"
                                          styleClass="ui-datatable-borderless ui-datatable-reflow">
-                                
+
                                 <p:ajax event="rowSelect" listener="#{creditoBancarioController.updateEntidadHabilitarCredito}" update="tblEntidades"/>
 
-                                <p:column headerText="id" width="25">
+                                <p:column headerText="id" width="20" style="text-align: center;">
                                     <h:outputText value="#{det.idDetProcesoAdq}"/>
                                 </p:column>
                                 <p:column headerText="Rubro">
                                     <h:outputText value="#{det.idRubroAdq.descripcionRubro}"/>
                                 </p:column>
-                                <p:column headerText="Habilitar" width="50" style="text-align: center;">
+                                <p:column headerText="Créditos" width="48" style="text-align: center;">
                                     <p:selectBooleanButton value="#{det.habilitarCredito}" onLabel="On" offLabel="Off"/>
+                                </p:column>
+                                <p:column headerText="Contratos" width="48" style="text-align: center;">
+                                    <p:selectBooleanButton value="#{det.habilitarRegistro}" onLabel="On" offLabel="Off"/>
                                 </p:column>
                             </p:dataTable>
                         </p:panel>
