--- a/paquescolar-web/src/main/webapp/app/proveedor/regDatosGenerales.xhtml
+++ b/paquescolar-web/src/main/webapp/app/proveedor/regDatosGenerales.xhtml
@@ -7,7 +7,7 @@
     template="#{pageContext.servletContext.contextPath}/resources/template/templateProveedor.xhtml">
     <ui:define name="content">
         <p:menubar id="menuBar" styleClass="divSticky"> 
-            <p:menuitem value="Guardar" icon="fa fa-save" action="#{datosGeneralesMB.guardarDatosGenerales}"/>
+            <p:menuitem value="Guardar" icon="fa fa-save" action="#{datosGeneralesMB.guardarDatosGenerales}" disabled="#{datosGeneralesMB.datosVerificados}"/>
             <p:menuitem value="Imprimir" disabled="true" />
 
             <f:facet  name="options">  
