--- a/paquescolar-web/src/main/webapp/app/proveedor/regMunicipiosInteres.xhtml
+++ b/paquescolar-web/src/main/webapp/app/proveedor/regMunicipiosInteres.xhtml
@@ -7,7 +7,7 @@
     template="#{pageContext.servletContext.contextPath}/resources/template/templateProveedor.xhtml">
     <ui:define name="content">
         <p:menubar id="menuBar" styleClass="divSticky"> 
-            <p:menuitem value="Guardar" icon="fa fa-save"  action="#{municipioInteresMB.guardarMunicipioInteres}"/>
+            <p:menuitem value="Guardar" icon="fa fa-save"  action="#{municipioInteresMB.guardarMunicipioInteres}" disabled="#{municipioInteresMB.datosVerificados}"/>
             <p:menuitem value="Imprimir" disabled="true"/>
 
             <f:facet  name="options">  
