--- a/paquescolar-web/src/main/webapp/app/proveedor/regDatosGenerales.xhtml
+++ b/paquescolar-web/src/main/webapp/app/proveedor/regDatosGenerales.xhtml
@@ -14,7 +14,7 @@
                 <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{guestPreferences.logout}"/>
             </f:facet>  
         </p:menubar>
-        
+
         <div class="ui-g">
             <div class="ui-g-12">
 
@@ -51,10 +51,10 @@
                                     <p:outputLabel value="Teléfono:"/>
                                     <h:panelGroup>
                                         <h:panelGrid columns="4">
-                                            <p:inputText value="#{datosGeneralesMB.empresa.telefonos}"/>
+                                            <p:inputMask mask="9999-9999" value="#{datosGeneralesMB.empresa.telefonos}"/>
                                             <p:spacer width="10"/>
                                             <p:outputLabel value="Celular:"/>
-                                            <p:inputText value="#{datosGeneralesMB.empresa.numeroCelular}"/>
+                                            <p:inputMask mask="9999-9999" value="#{datosGeneralesMB.empresa.numeroCelular}"/>
                                         </h:panelGrid>
                                     </h:panelGroup>
                                     <p:outputLabel value="NIT:"/>
@@ -80,14 +80,14 @@
                                     </h:panelGroup>
 
                                     <p:outputLabel value="Teléfono:"/>
-                                    <p:inputText value="#{datosGeneralesMB.empresa.idPersona.numeroTelefono}"/>
+                                    <p:inputMask mask="9999-9999" value="#{datosGeneralesMB.empresa.idPersona.numeroTelefono}"/>
                                     <p:outputLabel value="Celular:"/>
-                                    <p:inputText value="#{datosGeneralesMB.empresa.idPersona.numeroCelular}"/>
+                                    <p:inputMask mask="9999-9999" value="#{datosGeneralesMB.empresa.idPersona.numeroCelular}"/>
 
                                     <p:outputLabel value="Teléfono 2:"/>
-                                    <p:inputText value="#{datosGeneralesMB.empresa.idPersona.numTelefono2}"/>
+                                    <p:inputMask mask="9999-9999" value="#{datosGeneralesMB.empresa.idPersona.numTelefono2}"/>
                                     <p:outputLabel value="Teléfono 3:"/>
-                                    <p:inputText value="#{datosGeneralesMB.empresa.idPersona.numTelefono3}"/>
+                                    <p:inputMask mask="9999-9999" value="#{datosGeneralesMB.empresa.idPersona.numTelefono3}"/>
 
                                     <p:outputLabel value="DUI:"/>
                                     <p:inputText value="#{datosGeneralesMB.empresa.idPersona.numeroDui}"/>
@@ -95,7 +95,7 @@
                                     <p:inputText value="#{datosGeneralesMB.empresa.idPersona.numeroNit}"/>
 
                                     <p:outputLabel value="Departamento: "/>
-                                    <p:selectOneMenu id="cboDepartamento" value="#{datosGeneralesMB.codigoDepartamento}">
+                                    <p:selectOneMenu id="cboDepartamento" value="#{datosGeneralesMB.codigoDepartamento}" disabled="#{datosGeneralesMB.personaNatural}">
                                         <f:selectItem noSelectionOption="true" itemLabel="Seleccione un departamento" />
                                         <f:selectItems value="#{catalogosGeneralesController.lstDepartamentos}" var="depaP" itemValue="#{depaP.codigoDepartamento}" itemLabel="#{depaP.codigoDepartamento} - #{depaP.nombreDepartamento}" />
                                         <p:ajax update="cboMunicipio"/>
@@ -114,7 +114,7 @@
                                     <p:inputTextarea value="#{datosGeneralesMB.empresa.idPersona.domicilio}" cols="100"/>
                                 </p:panelGrid>
                             </p:tab>
-                            <p:tab title="Datos de Calificación">
+                            <p:tab title="Datos de Calificación" rendered="#{datosGeneralesMB.capacidadInst.idMuestraInteres.idDetProcesoAdq.idRubroAdq.idRubroInteres ne 2}">
                                 <p:panelGrid columns="2" columnClasses="col3_label,col9" 
                                              styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
                                     <p:outputLabel value="Departamento Calificado: "/>
@@ -135,7 +135,7 @@
                                         <li><p:outputLabel value="El período de ejecución de los contratos es de 60 días y deben cubrirse, sin falta, en ese período (incluye la coordinación de entrega y posibles arreglos a los bienes)."/><br/></li>
                                         <li><p:outputLabel value="Considere también que puede resultar adjudicado por varios centros educativos, lo que supone que deberá coordinar y hacer la toma de tallas con cada uno sin que eso signifique una justificación a incumplir con lo considerado en el literal anterior."/><br/></li>
                                     </ul>
-                                    
+
                                     <p:outputLabel value="Habiendo leído y tomado en cuenta los literales que antecenden considero que mi Capacidad de Producción es:"/>
                                     <p:spacer width="10"/>
                                     <p:inputNumber id="txtCapacidadPro" value="#{datosGeneralesMB.capacidadInst.capacidadPropuesta}" decimalPlaces="0" size="10"
