--- a/paquescolar-web/src/main/webapp/app/inicial.xhtml
+++ b/paquescolar-web/src/main/webapp/app/inicial.xhtml
@@ -47,6 +47,10 @@
                                 <p:commandButton value="Reversion masiva de contratos" icon="fa fa-print" disabled="false" action="#{resolucionesAdjudicativasController.reversionMasiva()}" />
                             </f:facet>
                         </p:panelGrid>
+                        
+                       <br/>
+                       <br/>
+                       <p:commandButton value="Enviar" action="#{estadisticasCensoController.enviarCorreos()}" /> 
                     </p:outputPanel>
                 </div>
             </div>
